test/testdata/e2e/grpc/listener.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Listener
metadata:
  name: test-listener
spec:
  name: test-listener
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 10080
