test/testdata/e2e/grpc/policy.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Policy
metadata:
  name: test-policy
spec:
  permissions:
    - any: true
  principals:
    - any: true
