test/testdata/e2e/grpc/route.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Route
metadata:
  name: test-route
spec:
  - name: test-route
    match:
      prefix: "/"
    route:
      cluster: test-cluster
